# stx2btc

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Package.swift  README.md  build-xcframework.sh  justfile  release.sh  validate-bindings.sh
.cargo/: config.toml
.github/workflows/: release.yml
Sources/stx2btc/: stx2btc.swift
src/: lib.rs
